--- a/index.html
+++ b/index.html
@@ -1,16 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cine+Premier</title>
+    <link rel="shortcut icon" href="Imagenes/cinema.png" type="image/x-icon">
     <meta name="description" content="Pagina de Inicio de Cine+Premier">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <header>
-        
+    <header class="container">
+        <div class="barra">
+            <div class="redes">
+                <img src="Imagenes/svg/facebook.svg" alt="">
+                <img src="Imagenes/svg/instagram.svg" alt="">
+                <img src="Imagenes/svg/twitter.svg" alt="">
+            </div>
+            <div class="buscar">
+                <input type="text" placeholder="Buscar">
+                <div class="btn">
+                    <img src="Imagenes/svg/search.svg" alt="">
+                </div>
+            </div>
+            <div class="botones">
+                <button class="registrarse">Registrarse</button>
+                <button class="sesion">Iniciar Sesión</button>
+            </div>
+            <div class="barra-opciones">
+                <div class="logo">
+                    <img src="Imagenes/cinema.png" alt="">
+                </div>
+                
+            </div>
+            <br>
+            <div class="categorias">
+                <p><b>CARTELERA</b></p>
+                <p>SNACKBAR</p>
+                <p>PROMOCIONES</p>
+            </div>
+        </div>
+        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:3.8%;">
+
+        <div class="parte-superior">
+            <div class="banner">
+                <img src="Imagenes/banner1.jpg" alt="">
+            </div>
+            <div class="peliculas-disponibles">
+                <div class="titulo">
+                    <h1>CINE +<br>
+                        PREMIER
+                    </h1>
+                </div>
+                <div class="peliculas-disponibles-botones">
+                    <button class="peliculas">PELÍCULAS</button>
+                    <button class="tarifas">TARIFAS</button>
+                </div>
+            </div>
+            <div class="disponibles">
+                <p>Películas Disponibles en Cine+ Premier</p>
+            </div>
+            <div class="galeria-peliculas">
+                <div class="imagen-pelicula">
+                    <img src="Imagenes/p1.jpg" alt="">
+                    <div class="hover-galeria">
+                        <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                        <p>Más <br>
+                            Información
+                        </p>
+                    </div>
+                </div>
+                <div class="imagen-pelicula">
+                    <img src="Imagenes/p2.jpg" alt="">
+                    <div class="hover-galeria">
+                        <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                        <p>Más <br>
+                            Información
+                        </p>
+                    </div>
+                </div>
+                <div class="imagen-pelicula">
+                    <img src="Imagenes/p3.jpg" alt="">
+                    <div class="hover-galeria">
+                        <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                        <p>Más <br>
+                            Información
+                        </p>
+                    </div>
+                </div>
+                <div class="imagen-pelicula">
+                    <img src="Imagenes/p4.jpg" alt="">
+                    <div class="hover-galeria">
+                        <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                        <p>Más <br>
+                            Información
+                        </p>
+                    </div>
+                </div>
+                <div class="imagen-pelicula">
+                    <img src="Imagenes/p5.jpg" alt="">
+                    <div class="hover-galeria">
+                        <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                        <p>Más <br>
+                            Información
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
