--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <header class="container">
+    <div class="container">
+    <header>
         <div class="barra">
             <div class="redes">
                 <img src="Imagenes/svg/facebook.svg" alt="">
@@ -41,7 +42,10 @@
                 <p>PROMOCIONES</p>
             </div>
         </div>
-        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:3.8%;">
+    </header>
+    </div>
+    <div class="container">
+        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:2.5%;">
 
         <div class="parte-superior">
             <div class="banner">
@@ -109,7 +113,193 @@
                 </div>
             </div>
         </div>
-    </header>
+            <div class="parte-inferior">
+                <aside class="info">
+                    <img src="Imagenes/c+p.jpeg" alt="">
+                    <div class="datos">
+                        <p class="subtitulos">DIRECCIÓN</p>
+                        <p class="parrafo">Av. Atahualpa y Victor Hugo Mall de Los Andes</p>
+                        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:3.8%;">
+                        <p class="subtitulos">HORARIOS DE APERTURA</p>
+                        <p class="parrafo">LUNES A VIERNES: 15 minutos antes de la primera función del día. <br>
+                            SÁBADOS, DOMINGOS Y FERIADOS:15 minutos antes de la primera función del día. <br>
+                            HORARIO DE CIERRE - LUNES A DOMINGO: 10 minutos después del comienzo de la última función del día.</p>
+                        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:3.8%;">
+                        <p class="subtitulos">TELÉFONO</p>
+                        <p class="parrafo">1700 456552</p>
+                        <hr style="height:1px;width:100%;border:none;color:#cacaca;background-color:#cacaca;margin-top:3.8%;">
+                    </div>
+                </aside>
+                <div class="horarios-peliculas">
+                    <div class="horarios">
+                        <div class="dias">
+                            <div class="dom">
+                                <p><b>DOM.<br>
+                                24 JUN. 2022</b></p>
+                            </div>
+                            <div class="lun">
+                                <p>LUN.<br>
+                                25 JUN. 2022</p><br>
+                            </div>
+                            <div class="mar">
+                                <p>MAR.<br>
+                                26 JUN. 2022</p><br>
+                            </div>
+                            <div class="mie">
+                                <p>MIE.<br>
+                                27 JUN. 2022</p><br>
+                            </div>
+                            <div class="jue">
+                                <p>JUE.<br>
+                                28 JUN. 2022</p><br>
+                            </div>
+                            <div class="vie">
+                                <p>VIE.<br>
+                                29 JUN. 2022</p><br>
+                            </div>
+                            <div class="sab">
+                                <p>SAB.<br>
+                                30 JUN. 2022</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="peliculas-ver">
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p6.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p7.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p8.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p9.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p10.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p11.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p12.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p13.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p14.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p15.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p16.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen-pelicula-ver">
+                            <img src="Imagenes/p17.jpg" alt="">
+                            <div class="hover-galeria-ver">
+                                <img src="Imagenes/svg/info-circle-fill.svg" alt="">
+                                <p>Más <br>
+                                    Información
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="container">
+            <div class="logo-footer">
+                <img src="Imagenes/cinema.png" alt="">
+            </div>
+            <div class="informacion">
+                <p><b>INFORMACIÓN</b></p><br><br>
+                <p>Blog</p> <br>
+                <p>Ayuda</p> <br>
+                <p>Términos de referencia</p> <br>
+                <p>FAQs</p>
+            </div>
+            <div class="contactanos">
+                <p><b>CONTÁCTANOS</b></p><br><br>
+                <p>cinePlus@cines.ec</p> <br>
+                <p>1700 456552</p> <br>
+                <p>@cinePlusPremier</p> <br>
+                <p>CINEPP.facebook.com</p>
+            </div>
+            <div class="social-redes">
+                <img class="fb" src="Imagenes/svg/facebook.svg" alt="">
+                <img class="ig" src="Imagenes/svg/instagram.svg" alt="">
+                <img class="tw" src="Imagenes/svg/twitter.svg" alt="">
+            </div>
+        </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
